# fxhash

./: .travis.yml  Cargo.toml  README.md  bench.rs  lib.rs
benches/: benches.rs
